@@ -1,4 +1,4 @@
-Copyright (c) 2006 Steven Noonan <steven@uplinklabs.net>.
+Copyright (c) 2006-2007 Steven Noonan <steven@uplinklabs.net>.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
