@@ -1,3 +1,5 @@
+# CrissCross common makefile options.
+
 VERSION = 0.5.9999
 VERSION_MAJOR = 0
 
@@ -12,15 +14,15 @@ endif
 LINK = $(CXX)
 
 ifeq ($(CFLAGS),)
-CFLAGS = -O3 -march=pentium2 -mtune=pentium2 -Wall -Wextra -ansi -pedantic -Wno-long-long -pipe -g
+CFLAGS = -O3 -march=pentium2 -mtune=pentium2 -Wall -ansi -pedantic -Wno-long-long -pipe -g
 else
-CFLAGS := -ansi -pedantic -Wno-long-long
+CFLAGS := -Wall -ansi -pedantic -Wno-long-long
 endif
 
 ifeq ($(CXXFLAGS),)
 CXXFLAGS = $(CFLAGS)
 else
-CXXFLAGS := -ansi -pedantic -Wno-long-long
+CXXFLAGS := -Wall -ansi -pedantic -Wno-long-long
 endif
 
 INCLUDES = 
