@@ -31,11 +31,11 @@
 //#  define CC_LIB_CODENAME            "Thor"          // v0.9.0 codename ( Milestone 4 )
 //#  define CC_LIB_CODENAME            "Valhalla"      // v1.0.0 codename ( Milestone 5 )
 
-#   define CC_LIB_VERSION             "0.5.9999"
-#   define CC_LIB_BRANCH_AT_VERSION   "0.6.0"
+#   define CC_LIB_VERSION             "0.6.0"
+#   define CC_LIB_BRANCH_AT_VERSION   "0.7.0"
 #   define CC_LIB_VERSION_MAJOR       0
-#   define CC_LIB_VERSION_MINOR       5
-#   define CC_LIB_VERSION_REVISION    9999
+#   define CC_LIB_VERSION_MINOR       6
+#   define CC_LIB_VERSION_REVISION    0
 const int CC_LIB_VERSION_BUILD      = BUILD_NUMBER;
 #   undef BUILD_NUMBER
 #   undef __included_build_number_h
